project(phastasteering)
cmake_minimum_required(VERSION 2.8)
enable_language(Fortran C CXX)
include(FortranCInterface)
FortranCInterface_Header(FCMangle.h)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
find_package(MPI REQUIRED)
include_directories(${MPI_INCLUDE_PATH})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/libphastasteering) 
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/external/cppzmq) 
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/external/libzmq/include)

find_package(Threads REQUIRED)

add_subdirectory(external/libzmq)
set(ZMQ_BUILD_FRAMEWORK OFF)
add_subdirectory(gui)
add_subdirectory(libphastasteering)
add_subdirectory(test)
